绘制设置界面

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -15,7 +15,7 @@ body {
     // align-items    : center;
     // justify-content: center;
     padding: 20px;
-    background     : #222;
+    background     : rgb(30, 30, 30);
     color          : #fff;
     overflow       : hidden;
     height         : 100vh;
