--- a/electron-app/src/renderer/src/style/variable.scss
+++ b/electron-app/src/renderer/src/style/variable.scss
@@ -1,3 +1,8 @@
+// font
+$--fontSizeTitle18: 18px;
+$--fontSizeTitle16: 16px;
+$--fontSizeText16: 16px;
+$--fontSizeText14: 14px;
 // spacing
 $--pagePadding: 10px;
 // color
